// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover - Snapshots > matches snapshot for PopoverTrigger with asChild 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  data-as-child="true"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  type="button"
>
  Open Popover
</button>
`;

exports[`Popover - Snapshots > matches snapshot for PopoverTrigger with default props 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  data-as-child="false"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  type="button"
>
  Open Popover
</button>
`;

exports[`Popover - Snapshots > matches snapshot for popover trigger in open state 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  data-as-child="true"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  type="button"
>
  Open Popover
</button>
`;
